完成登陆框!

--- a/AdminLTE-2.3.11/plugins/iCheck/square/blue.css
+++ b/AdminLTE-2.3.11/plugins/iCheck/square/blue.css
@@ -9,7 +9,7 @@
     padding: 0;
     width: 22px;
     height: 22px;
-    background: url(blue.png) no-repeat;
+    background: url(../img/blue.png) no-repeat;
     border: none;
     cursor: pointer;
 }
