--- a/views/auth/login.html
+++ b/views/auth/login.html
@@ -25,42 +25,41 @@
   <div class="login-box-body">
     <p class="login-box-msg">Sign in to start your session</p>
 
-    <form action="../../index2.html" method="post">
+    <form action="/auth/login" method="post">
       <div class="form-group has-feedback">
-        <input type="email" class="form-control" placeholder="Email">
+        <input type="email" class="form-control" placeholder="Email|邮箱">
         <span class="glyphicon glyphicon-envelope form-control-feedback"></span>
       </div>
       <div class="form-group has-feedback">
-        <input type="password" class="form-control" placeholder="Password">
+        <input type="password" class="form-control" placeholder="Password|密码">
         <span class="glyphicon glyphicon-lock form-control-feedback"></span>
       </div>
       <div class="row">
         <div class="col-xs-8">
           <div class="checkbox icheck">
             <label>
-              <input type="checkbox"> Remember Me
+              <input type="checkbox">  记住我
             </label>
           </div>
         </div>
         <!-- /.col -->
         <div class="col-xs-4">
-          <button type="submit" class="btn btn-primary btn-block btn-flat">Sign In</button>
+          <button type="submit" class="btn btn-success btn-block btn-flat">登陆</button>
         </div>
         <!-- /.col -->
       </div>
     </form>
 
     <div class="social-auth-links text-center">
-      <p>- OR -</p>
-      <a href="#" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-facebook"></i> Sign in using
-        Facebook</a>
-      <a href="#" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-google-plus"></i> Sign in using
-        Google+</a>
+      <p>--- OR ---</p>
+      <a href="/auth/loginWechat" class="btn btn-block btn-social btn-facebook btn-flat"><i class="fa fa-wechat"></i>微信登陆</a>
+      <a href="/auth/loginWeibo" class="btn btn-block btn-social btn-google btn-flat"><i class="fa fa-weibo"></i>微博登陆</a>
+      <a href="/auth/loginQQ" class="btn btn-block btn-social btn-twitter btn-flat"><i class="fa fa-qq"></i>QQ登陆</a>
     </div>
     <!-- /.social-auth-links -->
 
-    <a href="#">I forgot my password</a><br>
-    <a href="register.html" class="text-center">Register a new membership</a>
+    <a href="#">忘记密码</a>
+    <a href="/auth/register" class="text-center pull-right">注册账号</a>
 
   </div>
   <!-- /.login-box-body -->
