添加模板函数

--- a/views/auth/login.html
+++ b/views/auth/login.html
@@ -23,6 +23,7 @@
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
+    <h1>{{fullSrc "all-app.css"}}</h1>
     <p class="login-box-msg">Sign in to start your session</p>
 
     <form action="/auth/login" method="post">
