--- a/views/auth/login.html
+++ b/views/auth/login.html
@@ -7,7 +7,7 @@
   <!-- Tell the browser to be responsive to screen width -->
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- Bootstrap 3.3.6 -->
-  <link rel="stylesheet" href="/static/css/all.min.css">
+  <link rel="stylesheet" href="{{cdnSrc "css/all.min.css"}}">
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -23,7 +23,6 @@
   </div>
   <!-- /.login-logo -->
   <div class="login-box-body">
-    <h1>{{fullSrc "all-app.css"}}</h1>
     <p class="login-box-msg">Sign in to start your session</p>
 
     <form action="/auth/login" method="post">
@@ -70,7 +69,7 @@
 <!-- /.login-box -->
 
 <!-- jQuery 2.2.3 -->
-<script src="/static/js/all-package.min.js"></script>
+<script src="{{cdnSrc "js/all-package.min.js"}}"></script>
 
 <script>
   $(function () {
