--- a/views/layout/base.html
+++ b/views/layout/base.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
 <html lang="zh-CN">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
-    <meta name="description" content="">
+    <meta name="description" content="哈哈">
     <meta name="author" content="https://news.trytv.org">
     <link rel="icon" href="../../favicon.ico">
     <title>Go语言测试:{{.Title}}</title>
-    <link href="//cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{cdnSrc "css/all.min.css"}}" rel="stylesheet">
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
       <script src="https://cdn.bootcss.com/html5shiv/3.7.3/html5shiv.min.js"></script>
       <script src="https://cdn.bootcss.com/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
+    {{ block "mycss" . }}{{ end }}
+
 </head>
 
 <body>
@@ -32,13 +35,12 @@
 
     <div class="container">
         <!--page conetent-->
-        {{.LayoutContent}}
+        {{ block "mycontent" . }}{{ end }}
         <!--buttom footer-->
         {{ template "layout/_footer.html" .}}
     </div>
-    <script src="//cdn.bootcss.com/jquery/1.12.4/jquery.min.js"></script>
-    <script src="//cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <script src="/static/js/app.js"></script>
+    <script src="{{cdnSrc "js/all-package.min.js"}}"></script>
+    {{ block "myjs" . }}{{ end }}
 </body>
 
 </html>
