--- a/views/layout/_footer.html
+++ b/views/layout/_footer.html
@@ -1,4 +1,6 @@
-<hr>
-<footer>
-  <p>&copy; <span id="year">2999</span> Company, Inc.</p>
+<footer class="main-footer">
+  <div class="pull-right hidden-xs">
+    <b>Version</b> 9999
+  </div>
+  <strong>Copyright &copy; 2014-2016 <a href="http://almsaeedstudio.com">Awesome Awesome</a>.</strong> All rights reserved.
 </footer>
