修复模板错误!!!

--- a/views/layout/_side_bar_right.html
+++ b/views/layout/_side_bar_right.html
@@ -10,7 +10,7 @@
     <div class="tab-content">
       <!-- Home tab content -->
       <div class="tab-pane" id="control-sidebar-home-tab">
-        <h3 class="control-sidebar-heading">Recent Activity</h3>
+        <h3 class="control-sidebar-heading">{{.Title}}</h3>
         <ul class="control-sidebar-menu">
           <li>
             <a href="javascript:void(0)">
@@ -187,6 +187,5 @@
     </div>
   </aside>
   <!-- /.control-sidebar -->
-  <!-- Add the sidebar's background. This div must be placed
-       immediately after the control sidebar -->
+  <!-- Add the sidebar's background. This div must be placed immediately after the control sidebar -->
   <div class="control-sidebar-bg"></div>
