--- a/views/article/index.html
+++ b/views/article/index.html
@@ -1,11 +1,6 @@
-<!-- Example row of columns -->
-
-{{ template "layout/base.html" . }}
-
-{{ define "mycontent" }}
 <div class="row">
-    <div class="col-md-4">
-        <h2>{{"Eric Zhou" | hi}}</h2>
+    <div class="col-md-12">
+        <h2>{{ hi "jerk"}}</h2>
         <p>
             <ul>
                 {{range $index, $value := .Articles}}
@@ -15,19 +10,4 @@
         </p>
         <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
     </div>
-    <div class="col-md-4">
-        <h2>Heading</h2>
-        <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum
-            nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio
-            dui. </p>
-        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis
-            euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo
-            sit amet risus.</p>
-        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-    </div>
 </div>
-{{end}}
