--- a/views/layout/_footer.html
+++ b/views/layout/_footer.html
@@ -1,6 +1,6 @@
 <footer class="main-footer">
   <div class="pull-right hidden-xs">
-    <b>Version</b> 9999
+    <b>Version</b> {{.Title}}
   </div>
   <strong>Copyright &copy; 2014-2016 <a href="http://almsaeedstudio.com">Awesome Awesome</a>.</strong> All rights reserved.
 </footer>
