--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -24,14 +24,14 @@
               <span class="label label-success">4</span>
             </a>
             <ul class="dropdown-menu">
-              <li class="header">You have 4 messages</li>
+              <li class="header">Y{{.Title}}</li>
               <li>
                 <!-- inner menu: contains the actual data -->
                 <ul class="menu">
                   <li><!-- start message -->
                     <a href="#">
                       <div class="pull-left">
-                        <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                        <img src='{{cdnSrc "img/user2-160x160.jpg"}}' class="img-circle" alt="User Image">
                       </div>
                       <h4>
                         Support Team
@@ -44,7 +44,7 @@
                   <li>
                     <a href="#">
                       <div class="pull-left">
-                        <img src="dist/img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                        <img src='{{cdnSrc "img/user3-128x128.jpg"}}' class="img-circle" alt="User Image">
                       </div>
                       <h4>
                         AdminLTE Design Team
@@ -56,7 +56,7 @@
                   <li>
                     <a href="#">
                       <div class="pull-left">
-                        <img src="dist/img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                        <img src='{{cdnSrc "img/user4-128x128.jpg"}}' class="img-circle" alt="User Image">
                       </div>
                       <h4>
                         Developers
@@ -68,7 +68,7 @@
                   <li>
                     <a href="#">
                       <div class="pull-left">
-                        <img src="dist/img/user3-128x128.jpg" class="img-circle" alt="User Image">
+                        <img src='{{cdnSrc "img/user3-128x128.jpg"}}' class="img-circle" alt="User Image">
                       </div>
                       <h4>
                         Sales Department
@@ -80,7 +80,7 @@
                   <li>
                     <a href="#">
                       <div class="pull-left">
-                        <img src="dist/img/user4-128x128.jpg" class="img-circle" alt="User Image">
+                        <img src='{{cdnSrc "img/user4-128x128.jpg"}}' class="img-circle" alt="User Image">
                       </div>
                       <h4>
                         Reviewers
@@ -213,13 +213,13 @@
           <!-- User Account: style can be found in dropdown.less -->
           <li class="dropdown user user-menu">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-              <img src="dist/img/user2-160x160.jpg" class="user-image" alt="User Image">
+              <img src='{{cdnSrc "img/user2-160x160.jpg"}}' class="user-image" alt="User Image">
               <span class="hidden-xs">Alexander Pierce</span>
             </a>
             <ul class="dropdown-menu">
               <!-- User image -->
               <li class="user-header">
-                <img src="dist/img/user2-160x160.jpg" class="img-circle" alt="User Image">
+                <img src='{{cdnSrc "img/user2-160x160.jpg"}}' class="img-circle" alt="User Image">
 
                 <p>
                   Alexander Pierce - Web Developer
