--- a/views/layout/base.html
+++ b/views/layout/base.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html>
-
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,12 +14,16 @@
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
+
+
+
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
 
-        {{template "layout/_nav.html"}} {{template "layout/_side_bar_left.html"}}
+        {{template "layout/_nav.html" .}} 
+        {{template "layout/_side_bar_left.html" .}}
 
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
@@ -38,7 +41,7 @@
 
             <!-- Main content -->
             <section class="content">
-                {{ block "mycontent" . }}{{ end }}
+                            {{.LayoutContent}}
             </section>
             <!-- /.content -->
         </div>
@@ -49,14 +52,15 @@
     <!-- ./wrapper -->
 
     <script src='{{cdnSrc "js/all-package.min.js"}}'></script>
-    <script src='{{cdnSrc "js/dashoard2.js"}}'></script>
-        <script src='{{cdnSrc "js/demo.js"}}'></script>
+    <script src='{{cdnSrc "js/dashboard2.js"}}'></script>
+    <script src='{{cdnSrc "js/demo.js"}}'></script>
 
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
     <!--<script src="{{cdnSrc "js/dashboard2.js"}}"></script>-->
     <!-- AdminLTE for demo purposes -->
     <!--<script src="{{cdnSrc "js/demo.js"}}"></script>-->
-    {{ block "myjs" . }}{{ end }}
+
+
 </body>
 
 </html>
