--- a/views/layout/base.html
+++ b/views/layout/base.html
@@ -7,16 +7,16 @@
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.6 -->
-    <link rel="stylesheet" href='{{cdnSrc "css/all.min.css"}}'>
+    <link rel="stylesheet" href='{{cdnSrc "css/all.min.css"}}'>    
+    <link rel="stylesheet" href='{{cdnSrc "css/my.css"}}'>
+
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-
-
-
+  <script src="/static/js/jquery-2.2.3.min.js"></script>
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
@@ -52,11 +52,11 @@
     <!-- ./wrapper -->
 
     <script src='{{cdnSrc "js/all-package.min.js"}}'></script>
-    <script src='{{cdnSrc "js/dashboard2.js"}}'></script>
     <script src='{{cdnSrc "js/demo.js"}}'></script>
+    <script src='{{cdnSrc "js/my.js"}}'></script>
 
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <!--<script src="{{cdnSrc "js/dashboard2.js"}}"></script>-->
+    <!--<script src="{{cdnSrc "js/dashboard2.js"}}"></script>  仪表盘用的   -->
     <!-- AdminLTE for demo purposes -->
     <!--<script src="{{cdnSrc "js/demo.js"}}"></script>-->
 
