--- a/views/layout/base.html
+++ b/views/layout/base.html
@@ -3,27 +3,28 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>AdminLTE 2 | Dashboard</title>
+    <base target="_blank"/>
+    <title>{{.app_name}}| {{.title}}</title>
+    <meta name="Keywords" content="{{.keyword}}" />
+    <meta name="Description" content="{{.description}}"/>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.6 -->
-    <link rel="stylesheet" href='{{cdnSrc "css/all.min.css"}}'>    
+    <link rel="stylesheet" href='{{cdnSrc "css/all.min.css"}}'>
     <link rel="stylesheet" href='{{cdnSrc "css/my.css"}}'>
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
   <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
   <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
   <![endif]-->
-  <script src="/static/js/jquery-2.2.3.min.js"></script>
+    <script src="/static/js/jquery-2.2.3.min.js"></script>
 </head>
 
 <body class="hold-transition skin-blue sidebar-mini">
     <div class="wrapper">
 
-        {{template "layout/_nav.html" .}} 
-        {{template "layout/_side_bar_left.html" .}}
+        {{template "layout/_nav.html" .}} {{template "layout/_side_bar_left.html" .}}
 
         <!-- Content Wrapper. Contains page content -->
         <div class="content-wrapper">
@@ -41,13 +42,12 @@
 
             <!-- Main content -->
             <section class="content">
-                            {{.LayoutContent}}
+                {{.LayoutContent}}
             </section>
             <!-- /.content -->
         </div>
         <!-- /.content-wrapper -->
-        {{template "layout/_footer.html" .}}
-        {{template "layout/_side_bar_right.html" .}}
+        {{template "layout/_footer.html" .}} {{template "layout/_side_bar_right.html" .}}
     </div>
     <!-- ./wrapper -->
 
