--- a/views/layout/_footer.html
+++ b/views/layout/_footer.html
@@ -2,5 +2,5 @@
   <div class="pull-right hidden-xs">
     <b>Version</b> {{.Title}}
   </div>
-  <strong>Copyright &copy; 2014-2016 <a href="http://almsaeedstudio.com">Awesome Awesome</a>.</strong> All rights reserved.
+  <strong>Copyright &copy; 2010-2016 <a href="https://www.trytv.org">美剧资讯分享网站</a>.</strong> All rights reserved.
 </footer>
