--- a/views/layout/base.html
+++ b/views/layout/base.html
@@ -4,9 +4,9 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <base target="_blank"/>
-    <title>{{.app_name}}| {{.title}}</title>
-    <meta name="Keywords" content="{{.keyword}}" />
-    <meta name="Description" content="{{.description}}"/>
+    <title>{{.app_name}}| {{.Title}}</title>
+    <meta name="Keywords" content="{{.app_name}}|{{.Keyword}}" />
+    <meta name="Description" content="{{.Description}}"/>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.6 -->
@@ -31,12 +31,10 @@
             <!-- Content Header (Page header) -->
             <section class="content-header">
                 <h1>
-                    Dashboard
-                    <small>Version 2.0</small>
+                    {{.Title}}<small>更新时间:{{.UpdateTime}}</small>
                 </h1>
                 <ol class="breadcrumb">
-                    <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-                    <li class="active">Dashboard</li>
+                    <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li><li class="active">Dashboard</li>
                 </ol>
             </section>
 
