--- a/views/layout/base.html
+++ b/views/layout/base.html
@@ -34,7 +34,9 @@
                     {{.Title}}<small>更新时间:{{.UpdateTime}}</small>
                 </h1>
                 <ol class="breadcrumb">
-                    <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li><li class="active">Dashboard</li>
+                    {{range $index, $elem := .BreadCrumbs}}
+                        <li><a href="{{$elem.Href}}" target="_blank"><i class="{{$elem.Class}}"></i> {{$elem.Name}}</a></li>
+                    {{end}}
                 </ol>
             </section>
 
