--- a/views/article/index.html
+++ b/views/article/index.html
@@ -1,14 +1,43 @@
-<div class="row">
-    <div class="col-md-12">
-
-        {{range $index, $value := .Articles}}
-            <div class="well-xs well">
-                <h3>
-                                    {{$value.Title}}
-                </h3>
-                <img src='{{$value.UrlVideo}}'>
-            </div>
-        {{end}}
-
+ {{range $index, $value := .Articles}}
+<div class="well-xs well media">
+    <div class="media-left">
+        <a href="/article/{{$value.ID}}">
+            <img src="{{$value |articleCoverageSrc}}" alt="{{$value.Title}}" class="img-thumbnail img-circle media-object">
+        </a>
     </div>
+    <div class="media-body">
+        <a href="/article/{{$value.ID}}">
+            <h2 class="media-heading text-center lead">{{$value.Title}} </h2>
+        </a>
+
+        <p class="text-excerpt">
+            {{ substr ($value.Body | html2str) 0 480}}...
+        </p>
+        <ul class="list-inline text-danger">
+                <li>
+                    <strong><span class="fa fa-calendar" title="发布日期"></strong>
+                    {{dateformat $value.CreatedAt "2006-01-02"}}
+                </li>
+                                
+                <li>
+                    <strong><span class="ion-clock" title="发布时间 publiced time"></strong>
+                    {{dateformat $value.CreatedAt "15:04"}}
+                    
+                </li>
+                <li>
+                    <strong><span class="glyphicon glyphicon-eye-open" title="阅读数量 read count"></strong>
+                    {{$value.ReadCount}}
+                </li>
+                <li>
+                    <strong><span class="ion-heart" title="收藏数量 favarate count"></strong>
+                    {{1000}}
+                </li>
+                <li>
+                    <strong><span class="fa fa-commenting" title="评论数量 comment count"></strong>
+                    {{1001}}
+                </li>
+        </ul>
+    </div>
+
 </div>
+{{end}}
