--- a/views/layout/base.html
+++ b/views/layout/base.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>{{.app_name}}| {{.Title}}</title>
-    <meta name="Keywords" content="{{.app_name}}|{{.Keyword}}" />
-    <meta name="Description" content="{{.Description}}"/>
+    <title>{{.GlobalName}}|{{.Title}}</title>
+    <meta name="Keywords" content="{{.GlobalKeyword}}{{.Keyword}}" />
+    <meta name="Description" content="{{.GlobalDescription}}{{.Description}}"/>
     <!-- Tell the browser to be responsive to screen width -->
     <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
     <!-- Bootstrap 3.3.6 -->
@@ -30,7 +30,7 @@
             <!-- Content Header (Page header) -->
             <section class="content-header">
                 <h1>
-                    {{.Title}}<small>更新时间:{{.UpdateTime}}</small>
+                    {{.Title}}
                 </h1>
                 {{if  .BreadCrumbs }}
                     <ol class="breadcrumb">
