--- a/views/article/index.html
+++ b/views/article/index.html
@@ -7,13 +7,13 @@
     </div>
     <div class="media-body">
         <a href="/article/{{$value.ID}}">
-            <h2 class="media-heading text-center lead">{{$value.Title}} </h2>
+            <h2 class="media-heading text-red text-center lead">{{$value.Title}} </h2>
         </a>
 
         <p class="text-excerpt">
             {{ substr ($value.Body | html2str) 0 480}}...
         </p>
-        <ul class="list-inline text-danger">
+        <ul class="list-inline text-green">
                 <li>
                     <strong><span class="fa fa-calendar" title="发布日期"></strong>
                     {{dateformat $value.CreatedAt "2006-01-02"}}
