--- a/views/layout/base.html
+++ b/views/layout/base.html
@@ -17,6 +17,7 @@
         <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
         <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
+    <script src='{{cdnSrc "js/jquery-2.2.3.min.js"}}'></script>
 </head>
 
 <body class="hold-transition skin-green sidebar-mini sidebar-collapse">
