gurnt js all changes

--- a/views/layout/base.html
+++ b/views/layout/base.html
@@ -52,7 +52,7 @@
     </div>
     <!-- ./wrapper -->
 
-    <script src='{{cdnSrc "js/all-package.min.js"}}'></script>
+    <script src='{{cdnSrc "js/all.min.js"}}'></script>
     <script src='{{cdnSrc "js/demo.js"}}'></script>
     <script src='{{cdnSrc "js/my.js"}}'></script>
 
