完成评论框系统

--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -4,24 +4,46 @@
       aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-    <a class="navbar-brand" href="#">MDBootstrap</a>
-    <div class="collapse navbar-collapse" id="collapseEx12">
+    <a class="navbar-brand" href="/"><img src="/static/img/logo56x56.png" width="35" height="35" alt="trytv.org logo"></a>
+    <div class="collapse navbar-collapse">
       <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+          <a class="nav-link">资讯 </a>
+        </li>
         <li class="nav-item active">
-          <a class="nav-link">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link">短片 </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">Features</a>
+          <a class="nav-link">趣图</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link">Pricing</a>
+          <a class="nav-link">英语</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link">好文</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link ">趣玩</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link ">创意</a>
+        </li>
+
+        <li class="nav-item ">
+          <a class="nav-link ">字幕</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link ">名言</a>
+        </li>
+        <li class="nav-item ">
+          <a class="nav-link ">有声读物</a>
         </li>
         <li class="nav-item btn-group">
-          <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Dropdown</a>
+          <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">短片</a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
-            <a class="dropdown-item">Action</a>
-            <a class="dropdown-item">Another action</a>
-            <a class="dropdown-item">Something else here</a>
+            <a class="dropdown-item">美文</a>
+            <a class="dropdown-item">去玩</a>
+            <a class="dropdown-item">创意</a>
           </div>
         </li>
       </ul>
