--- a/views/layout/base.html
+++ b/views/layout/base.html
@@ -9,8 +9,7 @@
     <link href="//cdn.bootcss.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
     <link href="//cdn.bootcss.com/mdbootstrap/4.3.2/css/mdb.min.css" rel="stylesheet">
-    <link href="/css/my.css" rel="stylesheet">
-    <script src="//cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+    <link href="/static/css/my.css" rel="stylesheet">
 </head>
 
 <body>
@@ -20,8 +19,11 @@
     <!-- 正文 -->
     <div class="container pt-3">
         {{.LayoutContent}}
-        <hr> {{template "layout/_footer.html" .}}
+        {{template "layout/_share_comment.html" .}}
+        {{template "layout/_footer.html" .}}
     </div>
+        <script src="//cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+
     <!-- Bootstrap tooltips -->
     <script src="//cdn.bootcss.com/tether/1.4.0/js/tether.min.js"></script>
     <!-- Bootstrap core JavaScript -->
