--- a/views/layout/_footer.html
+++ b/views/layout/_footer.html
@@ -1,40 +1,60 @@
-        <!--Footer-->
-        <footer class="page-footer blue center-on-small-only">
+<!--Footer-->
+<footer class="page-footer blue center-on-small-only">
 
-            <!--Footer Links-->
-            <div class="container-fluid">
-                <div class="row">
+    <!--Footer Links-->
+    <div class="container-fluid">
+        <div class="row">
 
-                    <!--First column-->
-                    <div class="col-md-6">
-                        <h5 class="title">Footer Content</h5>
-                        <p>Here you can use rows and columns here to organize your footer content.</p>
-                    </div>
-                    <!--/.First column-->
-
-                    <!--Second column-->
-                    <div class="col-md-6">
-                        <h5 class="title">Links</h5>
-                        <ul>
-                            <li><a href="#!">Link 1</a></li>
-                            <li><a href="#!">Link 2</a></li>
-                            <li><a href="#!">Link 3</a></li>
-                            <li><a href="#!">Link 4</a></li>
-                        </ul>
-                    </div>
-                    <!--/.Second column-->
-                </div>
+            <!--First column-->
+            <div class="col">
+                <h5 class="title">Footer Content</h5>
+                <p>Here you can use rows and columns here to organize your footer content.</p>
             </div>
-            <!--/.Footer Links-->
+            <!--/.First column-->
 
-            <!--Copyright-->
-            <div class="footer-copyright">
-                <div class="container-fluid">
-                    © 2015 Copyright: <a href="https://www.MDBootstrap.com"> MDBootstrap.com </a>
-
-                </div>
+            <!--Second column-->
+            <div class="col">
+                <h5 class="title">Links</h5>
+                <ul>
+                    <li><a href="#!">Link 1</a></li>
+                    <li><a href="#!">Link 2</a></li>
+                </ul>
             </div>
-            <!--/.Copyright-->
+            <!--/.Second column-->
 
-        </footer>
-        <!--/.Footer-->
+
+            <div class="col">
+                <h5 class="title">Links</h5>
+                <ul>
+                    <li><a href="#!">Link 1</a></li>
+                    <li><a href="#!">Link 2</a></li>
+                </ul>
+            </div>
+            <div class="col">
+                <h5 class="title">Links</h5>
+                <ul>
+                    <li><a href="#!">Link 1</a></li>
+                    <li><a href="#!">Link 2</a></li>
+                </ul>
+            </div>
+            <div class="col">
+                <h5 class="title">Links</h5>
+                <ul>
+                    <li><a href="#!">Link 1</a></li>
+                    <li><a href="#!">Link 2</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!--/.Footer Links-->
+
+    <!--Copyright-->
+    <div class="footer-copyright">
+        <div class="container-fluid">
+            © 2017 Copyright: <a href="http://www.tryt.com"> trytv.org </a>
+        </div>
+    </div>
+    <!--/.Copyright-->
+
+</footer>
+<!--/.Footer-->
