--- a/views/layout/base.html
+++ b/views/layout/base.html
@@ -20,7 +20,7 @@
     <div class="container pt-1">
         <div class="row">
             <!--正文-->
-            <div class="col-md-8">
+            <div class="col-md-8 pr-sm-0 pr-xs-1">
                 <div class="card mb-1">
                     <!--面包屑-->
                     {{template "layout/_breadcrumb.html" .}}
