--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-toggleable-md navbar-dark bg-primary">
+<nav class="navbar navbar-toggleable-sm navbar-dark bg-primary">
   <div class="container">
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#collapseEx12" aria-controls="collapseEx2"
       aria-expanded="false" aria-label="Toggle navigation">
