--- a/views/home/index.html
+++ b/views/home/index.html
@@ -17,28 +17,11 @@
         <div class="view overlay hm-white-slight">
             <img src="{{$value.CoverageUrl}}" alt="{{$value.Title}}" class="img-fluid">
 
-            <div class="series-card-details">
-                <p>
-                    <span class="fa fa-calendar" title="发布日期"></strong> {{$value.CreatedDate}}
-                </p>
-            
+            <div class="series-card-details mx-auto d-flex align-items-center">
+
+
                 <h4 class="text-center"><a class="text-white" href="/article/{{$value.ID}}"> {{$value.Title}}</a></h4>
 
-                <ul class="list-inline">
-                    <li class="list-inline-item">
-                        <strong><span class="ion-clock" title="发布时间 publiced time" data-time={{dateformat $value.CreatedAt "2006-01-02 15:04:11"}}></strong>                    {{$value.CreatedTime}}
-
-                    </li>
-                    <li class="list-inline-item">
-                        <strong><span class="glyphicon glyphicon-eye-open" title="阅读数量 read count"></strong> {{$value.ReadCount}}
-                    </li>
-                    <li class="list-inline-item">
-                        <strong><span class="ion-heart" title="收藏数量 favarate count"></strong> {{1000}}
-                    </li>
-                    <li class="list-inline-item">
-                        <strong><span class="fa fa-commenting" title="评论数量 comment count"></strong> {{1001}}
-                    </li>
-                </ul>
             </div>
             <div class="mask waves-effect waves-light"></div>
 
@@ -51,6 +34,26 @@
         <div class="card-block">
             <!--Title-->
             <p class="card-text">{{ $value.Excerpt }}</p>
+
+            <ul class="list-inline text-green">
+                <li class="list-inline-item">
+                    <strong><span class="fa fa-calendar" title="发布日期"></strong> {{$value.CreatedDate}}
+                </li>
+
+                <li class="list-inline-item">
+                    <strong><span class="ion-clock" title="发布时间 publiced time" data-time={{dateformat $value.CreatedAt "2006-01-02 15:04:11"}}></strong>                    {{$value.CreatedTime}}
+
+                </li>
+                <li class="list-inline-item">
+                    <strong><span class="glyphicon glyphicon-eye-open" title="阅读数量 read count"></strong> {{$value.ReadCount}}
+                </li>
+                <li class="list-inline-item">
+                    <strong><span class="ion-heart" title="收藏数量 favarate count"></strong> {{1000}}
+                </li>
+                <li class="list-inline-item">
+                    <strong><span class="fa fa-commenting" title="评论数量 comment count"></strong> {{1001}}
+                </li>
+            </ul>
 
         </div>
         <!--/.Card content-->
