--- a/views/home/index.html
+++ b/views/home/index.html
@@ -7,60 +7,143 @@
 
 <div class="card-columns">
 
-    {{range $index, $value := .Articles}}
+        {{range $index, $value := .Articles}}
 
 
-    <!--Card-->
-    <div class="card mb-1">
+        <!--Card-->
+        <div class="card mb-1">
 
-        <!--Card image-->
-        <div class="view overlay hm-white-slight">
-            <img src="{{$value.CoverageUrl}}" alt="{{$value.Title}}" class="img-fluid">
+                <!--Card image-->
+                <div class="view overlay hm-white-slight">
+                        <img src="{{$value.CoverageUrl}}" alt="{{$value.Title}}" class="img-fluid">
 
-            <div class="series-card-details mx-auto d-flex align-items-center">
+                        <div class="series-card-details mx-auto d-flex align-items-center">
 
 
-                <h4 class="text-center"><a class="text-white" href="/article/{{$value.ID}}"> {{$value.Title}}</a></h4>
+                                <h4 class="text-center"><a class="text-white" href="/article/{{$value.ID}}"> {{$value.Title}}</a></h4>
 
-            </div>
-            <div class="mask waves-effect waves-light"></div>
+                        </div>
+                        <div class="mask waves-effect waves-light"></div>
 
+                </div>
+                <!--/.Card image-->
+
+
+
+                <!--Card content-->
+                <div class="card-block">
+                        <!--Title-->
+                        <p class="card-text">{{ $value.Excerpt }}</p>
+
+                        <ul class="list-inline text-green">
+                                <li class="list-inline-item">
+                                        <strong><span class="fa fa-calendar" title="发布日期"></strong> {{$value.CreatedDate}}
+                                </li>
+
+                                <li class="list-inline-item">
+                                        <strong><span class="ion-clock" title="发布时间 publiced time" data-time={{dateformat $value.CreatedAt "2006-01-02 15:04:11"}}></strong>                                        {{$value.CreatedTime}}
+
+                                </li>
+                                <li class="list-inline-item">
+                                        <strong><span class="glyphicon glyphicon-eye-open" title="阅读数量 read count"></strong>                                        {{$value.ReadCount}}
+                                </li>
+                                <li class="list-inline-item">
+                                        <strong><span class="ion-heart" title="收藏数量 favarate count"></strong> {{1000}}
+                                </li>
+                                <li class="list-inline-item">
+                                        <strong><span class="fa fa-commenting" title="评论数量 comment count"></strong> {{1001}}
+                                </li>
+                        </ul>
+
+                </div>
+                <!--/.Card content-->
         </div>
-        <!--/.Card image-->
+        <!--/.Card-->
 
-
-
-        <!--Card content-->
-        <div class="card-block">
-            <!--Title-->
-            <p class="card-text">{{ $value.Excerpt }}</p>
-
-            <ul class="list-inline text-green">
-                <li class="list-inline-item">
-                    <strong><span class="fa fa-calendar" title="发布日期"></strong> {{$value.CreatedDate}}
-                </li>
-
-                <li class="list-inline-item">
-                    <strong><span class="ion-clock" title="发布时间 publiced time" data-time={{dateformat $value.CreatedAt "2006-01-02 15:04:11"}}></strong>                    {{$value.CreatedTime}}
-
-                </li>
-                <li class="list-inline-item">
-                    <strong><span class="glyphicon glyphicon-eye-open" title="阅读数量 read count"></strong> {{$value.ReadCount}}
-                </li>
-                <li class="list-inline-item">
-                    <strong><span class="ion-heart" title="收藏数量 favarate count"></strong> {{1000}}
-                </li>
-                <li class="list-inline-item">
-                    <strong><span class="fa fa-commenting" title="评论数量 comment count"></strong> {{1001}}
-                </li>
-            </ul>
-
-        </div>
-        <!--/.Card content-->
-    </div>
-    <!--/.Card-->
-
-
-
-    {{end}}
+        {{end}}
 </div>
+
+
+
+<script>
+        var pageIndex = 1;
+        var tatalCount = '{{len .Articles}}';
+
+        $(function () {
+
+                // dropload
+                //https://github.com/ximan/dropload
+                $('div.card-columns').dropload({
+                        scrollArea: window,
+                        domUp: {
+                                domClass: 'dropload-up',
+                                domRefresh: '<div class="dropload-refresh">↓下拉刷新-了解更多美剧资讯学习更多潮流英语</div>',
+                                domUpdate: '<div class="dropload-update">↑释放更新-自定义内容</div>',
+                                domLoad: '<div class="dropload-load"><span class="loading"></span>加载中-了解更多美剧资讯学习更多潮流英语...</div>'
+                        },
+                        domDown: {
+                                domClass: 'dropload-down',
+                                domRefresh: '<div class="dropload-refresh">↑上拉加载更多-了解更多美剧资讯学习更多潮流英语</div>',
+                                domLoad: '<div class="dropload-load"><span class="loading"></span>加载中-了解更多美剧资讯学习更多潮流英语...</div>',
+                                domNoData: '<div class="dropload-noData">暂无数据-了解更多美剧资讯学习更多潮流英语</div>'
+                        },
+                        loadUpFn: function (me) {
+
+                        },
+                        loadDownFn: function (me) {
+                                //last time 暂时不需要
+                                let lastTime = $('section.content > div.well:last > div.media-body > ul > li:nth-child(2) > strong > span').data('time')
+                                let param = { _xsrf: csrf_token, offset: tatalCount }
+                                // 拼接HTML
+                                var result = '';
+                                $.ajax({
+                                        type: 'POST',
+                                        url: '/article/load-more',
+                                        data: param,
+                                        success: function (data) {
+                                                var arrLen = data.data.length;
+                                                //修改偏移量 导致ajax 发送的参数增加
+                                                tatalCount += arrLen;
+
+                                                if (arrLen > 0) {
+                                                        for (var i = 0; i < arrLen; i++) {
+                                                                let item = data.data[i]
+
+                                                                //html 输出
+                                                                result += '<div class="well-xs well media"><div class="media-left"><a href="/article/'
+                                                                        + item.ID + '"><img src="'
+                                                                        + item.CoverageUrl + '" alt="'
+                                                                        + item.Title + '" class="img-thumbnail img-circle media-object"></a></div><div class="media-body"><a href="/article/'
+                                                                        + item.ID + '"><h2 class="media-heading text-red text-center lead">'
+                                                                        + item.Title + '</h2></a><p class="text-excerpt">'
+                                                                        + item.Excerpt + '</p><ul class="list-inline text-green"><li><strong><span class="fa fa-calendar" title="发布日期"></span></strong>'
+                                                                        + item.CreatedDate + '</li><li><strong><span class="ion-clock" title="发布时间 publiced time" data-time="2017-05-12 07:21:55"></span></strong>'
+                                                                        + item.CreatedTime + '</li><li><strong><span class="glyphicon glyphicon-eye-open" title="阅读数量 read count"></span></strong>'
+                                                                        + 1999 + '</li><li><strong><span class="ion-heart" title="收藏数量 favarate count"></span></strong>'
+                                                                        + 3123 + '</li><li><strong><span class="fa fa-commenting" title="评论数量 comment count"></span></strong>'
+                                                                        + 3434 + '</li></ul></div></div>';
+                                                        }
+                                                        // 如果没有数据
+                                                } else {
+                                                        // 锁定
+                                                        me.lock();
+                                                        // 无数据
+                                                        me.noData();
+                                                }
+                                                //插入dom
+                                                $('section.content > div.well:last').after(result);
+                                                // 每次数据插入，必须重置
+                                                me.resetload();
+                                        },
+                                        error: function (xhr, type) {
+                                                alert('TRY美剧除了一个小错');
+                                                // 即使加载出错，也得重置
+                                                me.resetload();
+                                        }
+                                });
+                        },
+                        threshold: 50
+                });
+        });
+
+</script>
