--- a/views/layout/_nav.html
+++ b/views/layout/_nav.html
@@ -38,6 +38,9 @@
         <li class="nav-item ">
           <a class="nav-link ">有声读物</a>
         </li>
+        <li class="nav-item ">
+          <a class="nav-link ">游戏CG</a>
+        </li>
         <li class="nav-item btn-group">
           <a class="nav-link dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">短片</a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenu1">
