--- a/views/layout/_footer.html
+++ b/views/layout/_footer.html
@@ -5,43 +5,25 @@
     <div class="container-fluid">
         <div class="row">
 
-            <!--First column-->
             <div class="col">
-                <h5 class="title">Footer Content</h5>
-                <p>Here you can use rows and columns here to organize your footer content.</p>
-            </div>
-            <!--/.First column-->
-
-            <!--Second column-->
-            <div class="col">
-                <h5 class="title">Links</h5>
+                <h5 class="title text-center">技术博客</h5>
                 <ul>
-                    <li><a href="#!">Link 1</a></li>
-                    <li><a href="#!">Link 2</a></li>
+                    <li class="text-center"><a href="//www.github.com">github</a></li>
+                    <li class="text-center"><a href="//www.stackoverflow.com">stackoverflow</a></li>
                 </ul>
             </div>
-            <!--/.Second column-->
-
-
-            <div class="col">
-                <h5 class="title">Links</h5>
+            <div class="col text-center">
+                <h5 class="title text-center">酷站分享</h5>
                 <ul>
-                    <li><a href="#!">Link 1</a></li>
-                    <li><a href="#!">Link 2</a></li>
+                    <li class="text-center"><a href="//wwww.reddit.com">reddit</a></li>
+                    <li class="text-center"><a href="//wwww.youtube.com">youtube</a></li>
                 </ul>
             </div>
             <div class="col">
-                <h5 class="title">Links</h5>
+                <h5 class="title text-center">友情链接</h5>
                 <ul>
-                    <li><a href="#!">Link 1</a></li>
-                    <li><a href="#!">Link 2</a></li>
-                </ul>
-            </div>
-            <div class="col">
-                <h5 class="title">Links</h5>
-                <ul>
-                    <li><a href="#!">Link 1</a></li>
-                    <li><a href="#!">Link 2</a></li>
+                    <li class="text-center"><a href="//www.trytv.org">美剧分享网站</a></li>
+                    <li class="text-center"><a href="//wwww.cnfluffy.com">技术博客网站</a></li>
                 </ul>
             </div>
         </div>
@@ -55,6 +37,5 @@
         </div>
     </div>
     <!--/.Copyright-->
-
 </footer>
 <!--/.Footer-->
